--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -21,14 +22,15 @@
     --destructive-foreground: 0 0% 98%;
     --border: 240 5.9% 90%;
     --input: 240 5.9% 90%;
-    --ring: 240 10% 3.9%;
+    --ring: 240 5.9% 10%;
+    --radius: 0.5rem;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
-    --radius: 0.5rem
   }
+
   .dark {
     --background: 240 10% 3.9%;
     --foreground: 0 0% 98%;
@@ -53,20 +55,21 @@
     --chart-2: 160 60% 45%;
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%
+    --chart-5: 340 75% 55%;
   }
 }
+
 @layer base {
   * {
     @apply border-border;
   }
   body {
-      @apply dark bg-background text-foreground;
+      @apply bg-white text-foreground;
   }
 }
 
 @layer utilities {
-  ::-webkit-scrollbar {
+  /* ::-webkit-scrollbar {
     @apply w-2;
   }
 
@@ -76,11 +79,11 @@
 
   ::-webkit-scrollbar-thumb {
     @apply bg-purple-500/40 rounded hover:bg-purple-500/60;
-  }
+  } */
 
   * {
     scrollbar-width: thin;
-    scrollbar-color: theme('colors.purple.500 / 0.4') theme('colors.purple.900 / 0.3');
+    scrollbar-color: theme('colors.teal.700 / 0.4') theme('colors.teal.900 / 0.3');
   }
 }
 
@@ -114,8 +117,8 @@
 .dapp-core-component__dappModalStyles__dappModalContent {
   @apply border-0 rounded-sm !important;
 }
-.dapp-core-component__main__btn-dark {
-  @apply bg-gradient-to-r from-purple-500 to-indigo-500 hover:from-purple-600 hover:to-indigo-600 text-white !important;
+.dapp-core-component__main__btn-primary {
+  @apply !w-full !border-0 !m-0 bg-[#00394F] hover:bg-[#00394F]/90 text-white font-semibold py-3 !important;
 }
 .dapp-core-component__walletConnectLoginContainerStyles__xPortal-pairing-button{
   @apply bg-gradient-to-r from-purple-500 to-indigo-500 !important;
